--- a/index.html
+++ b/index.html
@@ -1,18 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sketch</title>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Sketch</title>
 
-    <script src="libraries/p5.min.js"></script>
-    <script src="libraries/p5.sound.min.js"></script>
-  </head>
+  <link rel="stylesheet" type="text/css" href="style.css">
 
-  <body>
-    <script src="sketch.js"></script>
-  </body>
+  <script src="libraries/p5.min.js"></script>
+  <script src="libraries/p5.sound.min.js"></script>
+</head>
+
+<body>
+  <header>
+    Halftone Processor
+  </header>
+  <div id="user-tools">
+    <input id="userImage" type="file" accept="image/png, image/gif, image/jpeg">
+    <div id="colorPickers">
+      <input id='redPicker' type="color" value="#E9D985">
+      <input id='greenPicker' type="color" value="#93d995">
+      <input id='bluePicker' type="color" value="#2DC7FF">
+    </div>
+    <input type="range" name="embiggener" id="embiggener" min="1" max="5">
+  </div>
+  <script>
+    function getBase64(file) {
+      return new Promise((resolve, reject) => {
+        var reader = new FileReader();
+        reader.readAsDataURL(file);
+        reader.onload = function () {
+          resolve(reader.result)
+        };
+        reader.onerror = reject
+      })
+    }
+    document.querySelector('#userImage').addEventListener('change', async (e) => {
+      const data = await getBase64(e.target.files[0])
+      localStorage.removeItem('img-BASE64')
+      localStorage.setItem('img-BASE64', data)
+      window.location.reload(true)
+    })
+  </script>
+  <div id="imgCanvas">
+
+  </div>
+  <script src="sketch.js"></script>
+</body>
+
 </html>
