--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <input type="range" name="embiggener" id="embiggener" min="1" max="5">
     <label for="dotSize">Dot size:</label>
     <input type="range" name="dotSize" id="dotSize" min="3" max="8">
+    <button name="saveBtn" id="saveBtn">Save Image</button>
   </div>
   <script>
     function getBase64(file) {
