--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <label for="embiggener">Embiggening: </label>
         <input type="range" name="embiggener" id="embiggener" min="1" max="5">
         <label for="dotSize">Dot size:</label>
-        <input type="range" name="dotSize" id="dotSize" min="3" max="8">
+        <input type="range" name="dotSize" id="dotSize" value="5" min="3" max="8">
       </div>
       <button name="saveBtn" id="saveBtn">Save Image</button>
     </div>
