fix: default embiggener slider

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <div id="sliders">
         <label for="embiggener">Embiggening: </label>
-        <input type="range" name="embiggener" id="embiggener" min="1" max="5">
+        <input type="range" name="embiggener" id="embiggener" value="5" min="1" max="5">
         <label for="dotSize">Dot size:</label>
         <input type="range" name="dotSize" id="dotSize" value="5" min="3" max="8">
       </div>
